--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,30 +1,25 @@
 name: Generate Snake
 
 on:
-  # Roda automaticamente a cada 24 horas
   schedule:
-    - cron: "0 0 * * *" 
-  
-  # Permite rodar manualmente na aba Actions
-  workflow_dispatch:
-
-  # Roda em cada push na branch master/main
+    - cron: "0 */12 * * *"  # Roda a cada 12 horas
+  workflow_dispatch:        # Permite rodar manualmente
   push:
     branches:
-    - master
-    - main
+    - main                  # Garante que roda na branch 'main'
 
 jobs:
-  generate:
-    permissions: 
-      contents: write
+  build:
     runs-on: ubuntu-latest
-    timeout-minutes: 5
+    permissions:            # Força a permissão de escrita explicitamente
+      contents: write
     
     steps:
-      # Gera a cobrinha baseada no gráfico de contribuições
-      - name: generate github-contribution-grid-snake.svg
-        uses: Platane/snk/svg-only@v3
+      - uses: actions/checkout@v3
+
+      - name: Generate the snake files in './dist/'
+        uses: Platane/snk@v3
+        id: snake-gif
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
@@ -32,10 +27,9 @@ jobs:
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          
-      # Envia a imagem gerada para uma branch separada chamada "output"
-      - name: push github-contribution-grid-snake.svg to the output branch
-        uses: crazy-max/gh-action-github-pages@v3.1.0
+
+      - name: Push new files to the output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
           build_dir: dist
